# ymbot_ocs2_ws

./: CMakeLists.txt  package.xml
auto/dynamics_flow_map/cppad_generated/: dynamics_flow_map_forward_zero.c  dynamics_flow_map_info.c  dynamics_flow_map_jacobian_sparsity.c  dynamics_flow_map_sparse_jacobian.c
auto/dynamics_guard_surfaces/cppad_generated/: dynamics_guard_surfaces_info.c
auto/dynamics_jump_map/cppad_generated/: dynamics_jump_map_forward_zero.c  dynamics_jump_map_info.c  dynamics_jump_map_jacobian_sparsity.c  dynamics_jump_map_sparse_jacobian.c
config/: left_arm.info
launch/: ymbot_d_VR_Left_arm.launch
rviz/: rviz.rviz
src/: MobileManipulatorDummyMRT.cpp  MobileManipulatorVRTarget.cpp  listen.cpp
ymbot_ocs2/data/data01/: README.md
ymbot_ocs2/data/data01/fast/: 1.bag  2024-10-25-19-46-28.bag  2024-10-25-19-47-00.bag
ymbot_ocs2/data/data01/fast/ros2_bag1/: metadata.yaml  ros2_bag1.db3
ymbot_ocs2/data/data01/slow/: 1.bag  2024-10-25-19-44-16.bag  2024-10-25-19-45-05.bag
ymbot_ocs2/data/data01/slow/ros2_bag1/: metadata.yaml  ros2_bag1.db3
ymbot_ocs2/documents/: mpc_policy消息的输出.txt  查看命令.md  消息传播.md
ymbot_ocs2/documents/msg/: mpc_flattened_controller.msg  mpc_state.msg  mpc_target_trajectories.msg
ymbot_ocs2/ymbot_d_description/: CMakeLists.txt  package.xml  urdf.rviz
ymbot_ocs2/ymbot_d_description/config/: joint_names_ymbot_d_description.yaml
ymbot_ocs2/ymbot_d_description/launch/: display.launch  gazebo.launch
ymbot_ocs2/ymbot_d_description/meshes/: Body_Link1.STL  Body_Link2.STL  Body_Link3.STL  Driven_Wheel_Link1.STL  Driven_Wheel_Link2.STL  Driven_Wheel_Link3.STL  Driven_Wheel_Link4.STL  Driven_Wheel_Link5.STL  Driven_Wheel_Link6.STL  Driven_Wheel_Link7.STL  Driven_Wheel_Link8.STL  Driving_Wheel_Link1.STL  Driving_Wheel_Link2.STL  Left_Arm_Link1.STL  Left_Arm_Link2.STL  Left_Arm_Link3.STL  Left_Arm_Link5.STL  Left_Arm_Link6.STL  Left_Arm_Link7.STL  Left_Arm_Link8.STL  Neck_Link1.STL  Neck_Link2.STL  Right_Arm_Link1.STL  Right_Arm_Link2.STL  Right_Arm_Link3.STL  Right_Arm_Link4.STL  Right_Arm_Link5.STL  Right_Arm_Link7.STL  Right_Arm_Link8.STL  base_link.STL
ymbot_ocs2/ymbot_d_description/meshes()/: Body_Link1.STL  Body_Link2.STL  Body_Link3.STL  Body_Link4.STL  Driven_Wheel_Link1.STL  Driven_Wheel_Link3.STL  Driven_Wheel_Link4.STL  Driven_Wheel_Link6.STL  Driving_Wheel_Link1.STL  Driving_Wheel_Link2.STL  Left_Arm_Link1.STL  Left_Arm_Link2.STL  Left_Arm_Link3.STL  Left_Arm_Link4.STL  Left_Arm_Link5.STL  Left_Arm_Link6.STL  Left_Arm_Link7.STL  Neck_Link1.STL  Neck_Link2.STL  Right_Arm_Link1.STL  Right_Arm_Link2.STL  Right_Arm_Link3.STL  Right_Arm_Link4.STL  Right_Arm_Link5.STL  Right_Arm_Link6.STL  Right_Arm_Link7.STL  base_link.STL
ymbot_ocs2/ymbot_d_description/urdf/: old.urdf  ymbot_d_description.csv  ymbot_d_description.urdf
ymbot_ocs2/ymbot_d_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
ymbot_ocs2/ymbot_d_moveit_config/config/: fake_controllers.yaml  gazebo_ymbot_d_description.urdf  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml  ymbot_d_description.srdf
ymbot_ocs2/ymbot_d_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_real.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml
ymbot_ocs2/ymbot_d_ros_control/: CMakeLists.txt  package.xml
ymbot_ocs2/ymbot_d_ros_control/config/: initial_positions.yaml  ros_control.yaml
ymbot_ocs2/ymbot_d_ros_control/include/ymbot_d_ros_control/: ymobot_hardware_interface_real.h  ymobot_hardware_interface_sim.h
ymbot_ocs2/ymbot_d_ros_control/launch/: move_to_start_pose.launch  ymbot_d_ros_control_ocs2_real.launch  ymbot_d_ros_control_real.launch  ymbot_d_ros_control_sim.launch
ymbot_ocs2/ymbot_d_ros_control/rviz/: rviz.rviz
ymbot_ocs2/ymbot_d_ros_control/src/: move_to_start_pose.cpp  ymbot_d_ros_control_ocs2.cpp  ymbot_d_ros_control_real.cpp  ymbot_d_ros_control_sim.cpp  ymbot_disable_all_motors.cpp
ymbot_ocs2/ymbot_devices_driver/: CMakeLists.txt  package.xml
ymbot_ocs2/ymbot_devices_driver/include/ymbot_devices_driver/: eu_planet.h  ymbot_joint_eu.h
ymbot_ocs2/ymbot_devices_driver/src/: ymbot_joint_eu_api.cpp  ymbot_joint_eu_keyboard.cpp
